# Khassan-O-vBot

./: .dockerignore  .env.dist  .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  docker-compose.yml  pyproject.toml
khassan_o_vbot/: __main__.py
khassan_o_vbot/utils/: settings.py
